--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,11 @@ a{
     width: 24%;
 }
 
+.hero{
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(rgba(8,0,58,0.7), rgba(8,0,58,0.7)), url('../public/hero.png');
+}
 
 @media (max-width: 1000px) {
     nav ul{
